--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,12 +53,12 @@
                 android:id="@+id/app_title" />
 
             <AutoCompleteTextView
-                android:id="@+id/email"
+                android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="50dip"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:hint="email address"
+                android:hint="your name"
                 android:inputType="textEmailAddress"
                 android:gravity="center"
                 android:maxLines="1"
@@ -81,7 +81,7 @@
                 android:layout_weight="0.81" />
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/btnLogin"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
